v1.5.8 (WIP)
- Fix some missing ANSI translations 

v1.5.7 (2021-09-01)
- Add Application.HandlePanic
- Add Modal.SetButtonsAlign and Modal.SetTextAlign
- Fix Application.QueueEvent
- Fix TextView.GetRegionText error when text contains color tags
- Fix TextView region tags when placed at the end of a line
- Do not customize Modal window styling by default (use GetForm and GetFrame to customize)
- Draw application after updating root primitive via Application.SetRoot

v1.5.6 (2021-07-08)
- Add TrueColorTags option and do not use TrueColor tag values by default
- Add TextView.SetHighlightForegroundColor and TextView.SetHighlightBackgroundColor
- Add TextView.SetVerticalAlign
- Add Button.SetCursorRune (cursors are now shown within Buttons when focused by default)
- Add CheckBox.SetCursorRune (cursors are now shown within CheckBoxes when focused by default)
- Add DropDown.SetAlwaysDrawDropDownSymbol (DropDown symbols are now shown only when focused by default)
- Add DropDown.SetDropDownOpenSymbolRune
- Fix TextView always visible scroll bar not appearing when empty
- Fix passing mouse events to Grid items (events are now only passed to the item under the mouse)
- Fix drawing InputField cursor outside of the field
- Draw additional accents when rendering a list divider
- Update Application.Draw and Application.QueueUpdateDraw to accept one or more
primitives to draw instead of the whole screen
- Update List, Table and TreeView to not handle Tab or Backtab
- Allow specifying TabbedPanels switcher height
- Change default colors (fields and buttons are now green)
- When resetting color with "-" tag, set background color to primitive
background color, rather than the terminal background color

v1.5.5 (2021-05-24)
- Fix Application.Suspend by restructuring event loop (queued updates will now only run between draws)

v1.5.4 (2021-04-03)
- Add TextView.GetBufferSize
- Fix strikethrough support

v1.5.3 (2021-01-14)