@@ -4,11 +4,10 @@ go 1.12
 
 require (
 	code.rocketnine.space/tslocum/cbind v0.1.5
-	github.com/gdamore/tcell/v2 v2.4.1-0.20210828201608-73703f7ed490
+	github.com/gdamore/tcell/v2 v2.4.1-0.20211027054709-8fc0c2be8f7d
 	github.com/lucasb-eyer/go-colorful v1.2.0
 	github.com/mattn/go-runewidth v0.0.14-0.20210830053702-dc8fe66265af
 	github.com/rivo/uniseg v0.2.0
-	golang.org/x/sys v0.0.0-20210831042530-f4d43177bf5e // indirect
-	golang.org/x/term v0.0.0-20210615171337-6886f2dfbf5b // indirect
-	golang.org/x/text v0.3.7 // indirect
+	golang.org/x/sys v0.0.0-20211112193437-faf0a1b62c6b // indirect
+	golang.org/x/term v0.0.0-20210927222741-03fcf44c2211 // indirect
 )
